--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "clipboardy": "^4.0.0",
     "dotenv": "^16.4.5",
     "got": "^14.4.2",
     "needle": "^3.3.1",
