--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "clipboardy": "^4.0.0",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "got": "^14.4.2",
     "needle": "^3.3.1",
     "oauth-1.0a": "^2.2.6",
     "puppeteer": "^23.5.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
